loom/crates/loom/tests/snapshots/cli_help__loom_review_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"review\"])"
---
LLM-judged review pass over the gate scope

Usage: loom review [OPTIONS]

Options:
  -s, --spec <LABEL>      Spec label override (defaults to `current_spec`)
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -b, --bead <ID>         Restrict the review scope to one bead
      --diff <RANGE>      Restrict the review scope to a git diff range
      --tree              Review the entire spec tree × implementation
  -h, --help              Print help
