loom/crates/loom/tests/snapshots/cli_help__loom_run_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"run\"])"
---
Per-bead execution loop. Continuous by default; `--once` exits after one bead

Usage: loom run [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -h, --help              Print help

Workflow:
      --once                 Process a single bead then exit (no auto-handoff to `loom check`)
  -p, --parallel <PARALLEL>  Concurrent dispatch slots (`-p N` / `--parallel N`). Default 1 [default: 1]
      --profile <PROFILE>    Override the per-bead `profile:X` label resolution
  -s, --spec <LABEL>         Spec label override (defaults to `current_spec`)
