loom/crates/loom/tests/snapshots/cli_help__loom_spec_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"spec\"])"
---
Inspect spec annotations and tooling dependencies

Usage: loom spec [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -h, --help              Print help

Inspect:
      --deps  Print the unique nixpkgs names referenced by verify/judge tests
