loom/crates/loom/tests/snapshots/cli_help__loom_todo_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"todo\"])"
---
Decompose the active spec into beads (four-tier detection)

Usage: loom todo [OPTIONS]

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi]
  -h, --help              Print help

Workflow:
  -s, --spec <LABEL>    Spec label override (defaults to `current_spec`)
      --since <COMMIT>  Override the anchor's `base_commit` for tier-1 detection
